--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2999,6 +2999,14 @@ body[dir="rtl"] .checkbox:checked,
   line-height: 2;
 }
 
+.input-sm {
+  height: 2rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  font-size: 0.875rem;
+  line-height: 2rem;
+}
+
 .modal-bottom {
   align-items: flex-end;
 }
@@ -3103,10 +3111,6 @@ body[dir="rtl"] .checkbox:checked,
   right: 0px;
 }
 
-.m-0 {
-  margin: 0px;
-}
-
 .m-6 {
   margin: 1.5rem;
 }
@@ -3125,12 +3129,12 @@ body[dir="rtl"] .checkbox:checked,
   margin-bottom: 1rem;
 }
 
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-
 .mb-8 {
   margin-bottom: 2rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
 }
 
 .flex {
@@ -3145,26 +3149,14 @@ body[dir="rtl"] .checkbox:checked,
   height: 1.5rem;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
-.h-8 {
-  height: 2rem;
-}
-
-.h-7 {
-  height: 1.75rem;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
 .w-fit {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .w-1\/2 {
@@ -3179,22 +3171,6 @@ body[dir="rtl"] .checkbox:checked,
   width: 1.5rem;
 }
 
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-7 {
-  width: 1.75rem;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
 .max-w-6xl {
   max-width: 72rem;
 }
@@ -3205,6 +3181,10 @@ body[dir="rtl"] .checkbox:checked,
 
 .gap-2 {
   gap: 0.5rem;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .overflow-x-auto {
@@ -3222,10 +3202,6 @@ body[dir="rtl"] .checkbox:checked,
 
 .p-0 {
   padding: 0px;
-}
-
-.p-4 {
-  padding: 1rem;
 }
 
 .px-3 {
@@ -3252,12 +3228,12 @@ body[dir="rtl"] .checkbox:checked,
   line-height: 2.25rem;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-white {
