--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2759,6 +2759,13 @@ body[dir="rtl"] .checkbox:checked,
   outline: 2px solid hsl(var(--er));
 }
 
+.label-text {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: hsl(var(--bc) / var(--tw-text-opacity));
+}
+
 .label a:hover {
   --tw-text-opacity: 1;
   color: hsl(var(--bc) / var(--tw-text-opacity));
@@ -3182,6 +3189,10 @@ body[dir="rtl"] .checkbox:checked,
   height: 1.5rem;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
 .w-fit {
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -3204,20 +3215,8 @@ body[dir="rtl"] .checkbox:checked,
   width: 1.5rem;
 }
 
-.w-12 {
-  width: 3rem;
-}
-
-.w-11 {
-  width: 2.75rem;
-}
-
 .w-20 {
   width: 5rem;
-}
-
-.w-16 {
-  width: 4rem;
 }
 
 .max-w-6xl {
@@ -3226,6 +3225,14 @@ body[dir="rtl"] .checkbox:checked,
 
 .flex-col {
   flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .gap-2 {
