--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1967,6 +1967,12 @@ html {
   border-radius: 0px;
 }
 
+.input-group-md {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  line-height: 2;
+}
+
 .input-group-sm {
   font-size: 0.875rem;
   line-height: 2rem;
@@ -2759,13 +2765,6 @@ body[dir="rtl"] .checkbox:checked,
   outline: 2px solid hsl(var(--er));
 }
 
-.label-text {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  --tw-text-opacity: 1;
-  color: hsl(var(--bc) / var(--tw-text-opacity));
-}
-
 .label a:hover {
   --tw-text-opacity: 1;
   color: hsl(var(--bc) / var(--tw-text-opacity));
@@ -3252,6 +3251,11 @@ body[dir="rtl"] .checkbox:checked,
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -3297,9 +3301,18 @@ body[dir="rtl"] .checkbox:checked,
   font-weight: 600;
 }
 
+.italic {
+  font-style: italic;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .shadow-lg {
